@@ -1,1 +1,0 @@
-libnvidia-ifr.so.#VERSION#		#LIBDIR#/#PRIVATE#
