@@ -1,2 +1,0 @@
-#LIBDIR#/#PRIVATE#/libnvidia-ifr.so.#VERSION#	#LIBDIR#/#PRIVATE#/libnvidia-ifr.so.1
-#LIBDIR#/#PRIVATE#/libnvidia-ifr.so.1		#LIBDIR#/#PRIVATE#/libnvidia-ifr.so
