@@ -1,3 +1,0 @@
-libnvidia-ifr.so.1 #PACKAGE# #MINVER#
-* Build-Depends-Package: #PACKAGE#
- NvIFROGLCreateInstance@Base 319
